--- a/public/css/editTable.css
+++ b/public/css/editTable.css
@@ -23,6 +23,7 @@ body {
   margin: 0;
   overflow: hidden;
   background-color: #f1efe7;
+  max-height: 17%;
 }
 
 #homelogo {
@@ -31,16 +32,24 @@ body {
   margin-bottom: 30px;
 }
 
+#logo {
+  width: 200px;
+  max-width: 100%;
+  height: auto;
+}
+
 #button1 {
   float: right;
-  margin-top: 20px;
+  margin-top: auto;
+  margin-bottom: auto;
   margin-right: 50px;
   margin-left: 30px;
 }
 
 #button2 {
   float: right;
-  margin-top: 20px;
+  margin-top: auto;
+  margin-bottom: auto;
   margin-right: 70px;
 }
 
@@ -165,26 +174,57 @@ input[type="time"] {
 }
 
 #footer {
-  position: fixed;
+  position: absolute;
   bottom: 0;
-  width: 100%;
-  left: 50%;
-  transform: translateX(-50%); /* Center the footer */
   background-color: #f3f2ef;
-  height: 90px;
-  padding-left: 8%;
-  box-sizing: border-box;
+  height: 12%;
+  width: 100%;
+  padding-left: auto;
+  padding-right: auto;
+  margin: 0;
 }
 
 .footerbutton {
   border: none;
   background: none;
-  padding: 15px 20px;
-  width: 120px;
-  margin-right: 100px;
+  padding: 15px 20px 15px 20px;
+  width: 11%;
+  margin-right: 10%;
+  margin-left: 0px;
+  flex-direction: column;
 }
-.footerbutton:hover {
-  background-color: #eae8e1;
+.footerbutton:hover,
+.footerbutton2:hover {
+  /*background-color: #eae8e1;*/
+  .btnlabel {
+    text-decoration: underline;
+  }
+}
+.footerbutton2 {
+  border: none;
+  background: none;
+  padding: 15px 20px 15px 20px;
+  width: 11%;
+  margin-right: 0px;
+}
+
+.btnicon {
+  width: 30px;
+  height: 30px;
+  object-fit: cover;
+  margin-bottom: 0;
+}
+.btnlabel {
+  font-family: "Quicksand";
+  text-align: center;
+  font-size: 15px;
+  align-items: center;
+}
+
+#container {
+  width: 70%;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 ul {
