--- a/public/css/tables.css
+++ b/public/css/tables.css
@@ -25,6 +25,7 @@ body {
   margin: 0;
   overflow: hidden;
   background-color: #f1efe7;
+  max-height: 17%;
 }
 
 #homelogo {
@@ -33,16 +34,24 @@ body {
   margin-bottom: 30px;
 }
 
+#logo {
+  width: 200px;
+  max-width: 100%;
+  height: auto;
+}
+
 #button1 {
   float: right;
-  margin-top: 20px;
+  margin-top: auto;
+  margin-bottom: auto;
   margin-right: 50px;
   margin-left: 30px;
 }
 
 #button2 {
   float: right;
-  margin-top: 20px;
+  margin-top: auto;
+  margin-bottom: auto;
   margin-right: 70px;
 }
 
@@ -66,14 +75,13 @@ body {
   text-align: center;
   font-size: 35px;
   font-family: "League Spartan Bold";
-  margin-bottom: 10px;
-  margin-top: 20px;
+  margin-bottom: 0;
+  margin-top: 10px;
 }
 
 #navigate {
   overflow: hidden;
   padding: 5px 30px 5px 30px;
-  margin-top: 10px;
 }
 
 #search {
@@ -183,24 +191,50 @@ body {
   justify-content: center;
   margin-right: 40px;
 }
-.btnicon {
-  width: 30px;
-  height: 30px;
-  object-fit: cover;
-  margin-right: 10px;
+
+#eventname {
+  background: none;
+  font-size: 20px;
+  border: none;
+  font-family: "Quicksand";
+}
+#eventname:hover {
+  text-decoration: underline;
 }
 
-.btnlabel {
-  font-family: "Quicksand";
-  font-size: 20px;
-}
 #footer {
-  position: fixed;
+  position: absolute;
   bottom: 0;
   background-color: #f3f2ef;
-  height: 90px;
+  height: 12%;
   width: 100%;
-  padding-left: 250px;
+  padding-left: auto;
+  padding-right: auto;
+  margin: 0;
+}
+
+.footerbutton {
+  border: none;
+  background: none;
+  padding: 15px 20px 15px 20px;
+  width: 11%;
+  margin-right: 10%;
+  margin-left: 0px;
+  flex-direction: column;
+}
+.footerbutton:hover,
+.footerbutton2:hover {
+  /*background-color: #eae8e1;*/
+  .btnlabel {
+    text-decoration: underline;
+  }
+}
+.footerbutton2 {
+  border: none;
+  background: none;
+  padding: 15px 20px 15px 20px;
+  width: 11%;
+  margin-right: 0px;
 }
 
 .btnicon {
@@ -213,59 +247,11 @@ body {
   font-family: "Quicksand";
   text-align: center;
   font-size: 15px;
-}
-#eventname {
-  background: none;
-  font-size: 20px;
-  border: none;
-  font-family: "Quicksand";
-}
-#eventname:hover {
-  text-decoration: underline;
+  align-items: center;
 }
 
-#footer {
-  position: fixed;
-  bottom: 0;
-  width: 100%;
-  left: 50%;
-  transform: translateX(-50%); /* Center the footer */
-  background-color: #f3f2ef;
-  height: 90px;
-  padding-left: 8%;
-  box-sizing: border-box;
-}
-
-.footerbutton {
-  border: none;
-  background: none;
-  padding: 15px 20px;
-  width: 120px;
-  margin-right: 100px;
-}
-.footerbutton:hover {
-  background-color: #eae8e1;
-}
-
-#footer {
-  position: fixed;
-  bottom: 0;
-  width: 100%;
-  left: 50%;
-  transform: translateX(-50%); /* Center the footer */
-  background-color: #f3f2ef;
-  height: 90px;
-  padding-left: 8%;
-  box-sizing: border-box;
-}
-
-.footerbutton {
-  border: none;
-  background: none;
-  padding: 15px 20px;
-  width: 120px;
-  margin-right: 100px;
-}
-.footerbutton:hover {
-  background-color: #eae8e1;
+#container {
+  width: 70%;
+  margin-left: auto;
+  margin-right: auto;
 }
