--- a/views/table_edit.hbs
+++ b/views/table_edit.hbs
@@ -8,17 +8,7 @@
 
 <body style="margin:0">
 
-    <div id="top">
-        <div id="homelogo">
-            <img src="css/logocropped.png" id="logo">
-            <div id="button2">
-                <a href="profile.html"><button type="button" id="b1">Profile</button></a>
-            </div>
-            <div id="button1">
-                <a href="events.html"><button type="button" id="b1">Events</button></a>
-            </div>
-        </div>
-    </div>
+    {{> header}}
 
     <div id="middle">
         <div id="head">
@@ -53,28 +43,7 @@
             </form>
         </div>
     </div>
-    <div id="footer">
-        <a href="collaborators.html"><button type="button" class="footerbutton" id="collaborators">
-                <img src="css/collaborators_icon_black.png" class="btnicon">
-                <p class="btnlabel">Collaborators</p>
-            </button> </a>
-        <a href="guests.html"><button type="button" class="footerbutton" id="guestlist">
-                <img src="css/guest_icon_black.png" class="btnicon">
-                <p class="btnlabel">Guest List</p>
-            </button> </a>
-        <a href="todo.html"><button type="button" class="footerbutton" id="todo">
-                <img src="css/todo_icon_black.png" class="btnicon">
-                <p class="btnlabel">To-Do</p>
-            </button> </a>
-        <a href="budget.html"><button type="button" class="footerbutton" id="budget">
-                <img src="css/budget_icon_black.png" class="btnicon">
-                <p class="btnlabel">Budget</p>
-            </button> </a>
-        <a href="chat.html"><button type="button" class="footerbutton" id="chat">
-                <img src="css/chat_icon_black.png" class="btnicon">
-                <p class="btnlabel">Chat</p>
-            </button> </a>
-    </div>
+    {{> navbar}}
 </body>
 <script src="table_script.js"></script>
 
